resolved timing bug

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -10,8 +10,8 @@
 [Config DanielBB]
 network = networks.DanielBB
 **.appType = "SourceRoutingApp"
-**.sendIaTime = 10ms  # high traffic
-**.app.packetLength = 1250 bytes # this is 10000 bits which means 10 ms @ 1Mbps
+**.sendIaTime = 1ms  # high traffic
+**.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
 #  destAddresses = "w0  f1  f2  v1  w1  g2  g1  v0" #original names
 **.destAddresses = "111 121 122 131 211 222 221 231" #array of destination addresses
 **.frameCapacity = 1000 #uniform queue size
@@ -21,7 +21,7 @@ network = networks.Daniel1
 **.appType = "SourceRoutingApp"
 **.sendIaTime = exponential(10ms)  # high traffic
 **.destAddresses = "0 1 2 3 4" #array of destination addresses
-**.adversaryInjections = "1 3 4"
+#**.adversaryInjections = "1 3 4"
 
 [Config Net60]
 network = networks.Net60
