implemented rate adaption

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -15,6 +15,7 @@ network = networks.DanielBB
 #  destAddresses = "w0  f1  f2  v1  w1  g2  g1  v0" #original names
 **.destAddresses = "111 121 122 131 211 222 221 231" #array of destination addresses
 **.frameCapacity = 1000 #uniform queue size
+**.injectionRate = 0.9
 
 [Config Daniel1]
 network = networks.Daniel1
