· finished refactoring work · renaming of project · deleted unused entries (remainings from basic routing example)

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -4,11 +4,10 @@
 #eventlog-message-detail-pattern = Packet:declaredOn(Packet) or bitLength
 #eventlog-message-detail-pattern = *
 
-**.appType = "App"
 **.app.packetLength = 1024 bytes
 
-[Config DanielBB]
-network = networks.DanielBB
+[Config BaseBall]
+network = networks.Baseball
 **.appType = "SourceRoutingApp"
 **.sendIaTime = 1ms  # high traffic
 **.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
@@ -17,46 +16,9 @@ network = networks.DanielBB
 **.frameCapacity = 1000 #uniform queue size
 **.injectionRate = 0.9
 
-[Config Daniel1]
-network = networks.Daniel1
+[Config Simple1]
+network = networks.Simple1
 **.appType = "SourceRoutingApp"
 **.sendIaTime = exponential(10ms)  # high traffic
 **.destAddresses = "0 1 2 3 4" #array of destination addresses
 #**.adversaryInjections = "1 3 4"
-
-[Config Net60]
-network = networks.Net60
-**.destAddresses = "1 50"
-
-[Config Net60Bursty]
-network = networks.Net60
-**.appType = "BurstyApp"  # override "App" in [General]
-**.app.packetLength = uniform(20 byte, 1024 byte)
-**.destAddresses = "1 50"
-
-[Config Net60a]
-network = networks.Net60a
-**.destAddresses = "1 28 50"
-
-[Config Net5]
-network = networks.Net5
-**.destAddresses = "1 3"
-**.sendIaTime = exponential(10ms)  # high traffic
-
-[Config Net10]
-network = networks.Net10
-**.app.packetLength = uniform(128 byte, 1024 byte)
-**.destAddresses = "1 6 8"
-
-[Config RandomGraph]
-network = networks.RandomGraph
-**.destAddresses = "0 2"
-
-[Config Mesh]
-network = networks.Mesh
-**.destAddresses = "0 18 52"
-
-[Config RandomMesh]
-network = networks.RandomMesh
-**.destAddresses = "0 18 52"
-
