Implemented basic statistics, first results in result folder

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -6,7 +6,7 @@
 
 **.app.packetLength = 1024 bytes
 
-[Config BaseBall]
+[Config Baseball]
 network = networks.Baseball
 **.appType = "SourceRoutingApp"
 **.sendIaTime = 1ms  # high traffic
@@ -14,7 +14,9 @@ network = networks.Baseball
 #  destAddresses = "w0  f1  f2  v1  w1  g2  g1  v0" #original names
 **.destAddresses = "111 121 122 131 211 222 221 231" #array of destination addresses
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = 0.9
+
+**.injectionRate = ${0.8..1.0 step 0.01}
+
 
 [Config Simple1]
 network = networks.Simple1
