--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -18,6 +18,29 @@ network = networks.Baseball
 **.injectionRate = ${0.8..1.0 step 0.01}
 
 
+[Config CE3]
+network = networks.CE3
+**.appType = "SourceRoutingApp"
+**.sendIaTime = 1ms  # high traffic
+**.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
+#  destAddresses = "w0  f1  f2  v1  w1  g2  g1  v0" #original names
+#**.destAddresses = "111 121 122 131 211 222 221 231" #array of destination addresses
+**.frameCapacity = 1000 #uniform queue size
+
+**.injectionRate = ${0.8..1.0 step 0.01}
+
+[Config CE7]
+network = networks.CE7
+**.appType = "SourceRoutingApp"
+**.sendIaTime = 1ms  # high traffic
+**.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
+#  destAddresses = "w0  f1  f2  v1  w1  g2  g1  v0" #original names
+#**.destAddresses = "111 121 122 131 211 222 221 231" #array of destination addresses
+**.frameCapacity = 1000 #uniform queue size
+
+**.injectionRate = ${0.8..1.0 step 0.01}
+
+
 [Config Simple1]
 network = networks.Simple1
 **.appType = "SourceRoutingApp"
