CE7mod show reasonable loss => but still out of sync, needs fixing

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -6,6 +6,17 @@
 
 **.app.packetLength = 1024 bytes
 
+[Config CE7modding]
+network = networks.CE7NonForwardConstraint
+**.appType = "SourceRoutingApp"
+**.sendIaTime = 1ms  # high traffic
+**.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
+**.destAddresses = "10 101 102 103 11 12 13 14 20 21 22 23 24 30 31 32 33 34"
+**.frameCapacity = 100 #uniform queue size
+
+**.injectionRate = 1.0
+
+
 [Config Baseball]
 network = networks.Baseball
 **.appType = "SourceRoutingApp"
@@ -24,7 +35,7 @@ network = networks.CE3
 **.sendIaTime = 1ms  # high traffic
 **.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
 #  destAddresses = "w0  f1  f2  v1  w1  g2  g1  v0" #original names
-#**.destAddresses = "111 121 122 131 211 222 221 231" #array of destination addresses
+**.destAddresses = "111 121 122 131 211 222 221 231" #array of destination addresses
 **.frameCapacity = 1000 #uniform queue size
 
 **.injectionRate = ${0.8..1.0 step 0.01}
@@ -34,8 +45,7 @@ network = networks.CE7
 **.appType = "SourceRoutingApp"
 **.sendIaTime = 1ms  # high traffic
 **.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
-#  destAddresses = "w0  f1  f2  v1  w1  g2  g1  v0" #original names
-#**.destAddresses = "111 121 122 131 211 222 221 231" #array of destination addresses
+**.destAddresses = "10 101 102 103 11 12 13 14 20 21 22 23 24 30 31 32 33 34"
 **.frameCapacity = 1000 #uniform queue size
 
 **.injectionRate = ${0.8..1.0 step 0.01}
