Finished CE7Advanced in new topology, 27% loss (not true as yet!!), included results over several runs

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -6,15 +6,15 @@
 
 **.app.packetLength = 1024 bytes
 
-[Config CE7modding]
-network = networks.CE7NonForwardConstraint
+[Config CE7Advanced]
+network = networks.CE7Advanced
 **.appType = "SourceRoutingApp"
 **.sendIaTime = 1ms  # high traffic
 **.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
 **.destAddresses = "10 101 102 103 11 12 13 14 20 21 22 23 24 30 31 32 33 34"
-**.frameCapacity = 100 #uniform queue size
+**.frameCapacity = 1000 #uniform queue size
 
-**.injectionRate = 1.0
+**.injectionRate = ${0.6..1.0 step 0.01}
 
 
 [Config Baseball]
