--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
+
+
 .tkenvlog
-results/*
+./results/*
+./out/*
+*.vci
+*.vec
+*.sca
+*.o
+
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
