refactored: splitting into new files; started work at CE3Advanced

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -6,6 +6,17 @@
 
 **.app.packetLength = 1024 bytes
 
+[Config CE3Advanced]
+network = networks.CE3Advanced
+**.appType = "SourceRoutingApp"
+**.sendIaTime = 1ms  # high traffic
+**.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
+**.destAddresses = "10 101 102 103 11 12 13 14 20 21 22 23 24 30 31 32 33 34"
+**.frameCapacity = 1000 #uniform queue size
+
+**.injectionRate = 1.0
+
+
 [Config CE7Advanced]
 network = networks.CE7Advanced
 **.appType = "SourceRoutingApp"
@@ -14,7 +25,7 @@ network = networks.CE7Advanced
 **.destAddresses = "10 101 102 103 11 12 13 14 20 21 22 23 24 30 31 32 33 34"
 **.frameCapacity = 1000 #uniform queue size
 
-**.injectionRate = ${0.6..1.0 step 0.01}
+**.injectionRate = ${0.8..1.0 step 0.01}
 
 
 [Config Baseball]
