--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,70 +1,40 @@
+# Main configuration file for running simulations
+
 [General]
 #debug-on-errors = true
 #record-eventlog = true
 #eventlog-message-detail-pattern = Packet:declaredOn(Packet) or bitLength
 #eventlog-message-detail-pattern = *
 
-**.app.packetLength = 1024 bytes
+
+**.sendIaTime = 1ms  # high traffic
+**.appType = "SourceRoutingApp"
+
 
 [Config CE3Advanced]
 network = networks.CE3Advanced
-**.appType = "SourceRoutingApp"
-**.sendIaTime = 1ms  # high traffic
-**.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
-**.destAddresses = "10 101 102 103 11 12 13 14 20 21 22 23 24 30 31 32 33 34"
 **.frameCapacity = 1000 #uniform queue size
-
-**.injectionRate = 1.0
+**.injectionRate = ${0.8..1.0 step 0.01}
 
 
 [Config CE7Advanced]
 network = networks.CE7Advanced
-**.appType = "SourceRoutingApp"
-**.sendIaTime = 1ms  # high traffic
-**.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
-**.destAddresses = "10 101 102 103 11 12 13 14 20 21 22 23 24 30 31 32 33 34"
 **.frameCapacity = 1000 #uniform queue size
-
 **.injectionRate = ${0.8..1.0 step 0.01}
 
 
 [Config Baseball]
 network = networks.Baseball
-**.appType = "SourceRoutingApp"
-**.sendIaTime = 1ms  # high traffic
-**.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
-#  destAddresses = "w0  f1  f2  v1  w1  g2  g1  v0" #original names
-**.destAddresses = "111 121 122 131 211 222 221 231" #array of destination addresses
 **.frameCapacity = 1000 #uniform queue size
-
 **.injectionRate = ${0.8..1.0 step 0.01}
 
 
 [Config CE3]
 network = networks.CE3
-**.appType = "SourceRoutingApp"
-**.sendIaTime = 1ms  # high traffic
-**.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
-#  destAddresses = "w0  f1  f2  v1  w1  g2  g1  v0" #original names
-**.destAddresses = "111 121 122 131 211 222 221 231" #array of destination addresses
 **.frameCapacity = 1000 #uniform queue size
-
 **.injectionRate = ${0.8..1.0 step 0.01}
 
 [Config CE7]
 network = networks.CE7
-**.appType = "SourceRoutingApp"
-**.sendIaTime = 1ms  # high traffic
-**.app.packetLength = 1250 bytes # this is 10000 bits which means 1 ms @ 10Mbps
-**.destAddresses = "10 101 102 103 11 12 13 14 20 21 22 23 24 30 31 32 33 34"
 **.frameCapacity = 1000 #uniform queue size
-
 **.injectionRate = ${0.8..1.0 step 0.01}
-
-
-[Config Simple1]
-network = networks.Simple1
-**.appType = "SourceRoutingApp"
-**.sendIaTime = exponential(10ms)  # high traffic
-**.destAddresses = "0 1 2 3 4" #array of destination addresses
-#**.adversaryInjections = "1 3 4"
