renaming of adversaries, clean-up by eclipse

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -11,30 +11,39 @@
 **.appType = "SourceRoutingApp"
 
 
-[Config CE3Advanced]
-network = networks.CE3Advanced
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.8..1.0 step 0.01}
-
-
-[Config CE7Advanced]
-network = networks.CE7Advanced
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.8..1.0 step 0.01}
-
-
-[Config Baseball]
-network = networks.Baseball
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.8..1.0 step 0.01}
-
-
 [Config CE3]
 network = networks.CE3
 **.frameCapacity = 1000 #uniform queue size
 **.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE3"
+
 
 [Config CE7]
 network = networks.CE7
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE7"
+
+
+[Config BBhalf]
+network = networks.BB
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = 1.0
+**.adType = "BBhalf"
+
+[Config BB]
+network = networks.BB
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = 1.0
+**.adType = "BB"
+
+
+[Config CE3half]
+network = networks.CE3half
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.8..1.0 step 0.01}
+
+[Config CE7half]
+network = networks.CE7half
 **.frameCapacity = 1000 #uniform queue size
 **.injectionRate = ${0.8..1.0 step 0.01}
