introduced QueueLengthRequest messages to work around deprecated omnet 3 feature (addPar), fixed BB adversary

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -24,17 +24,10 @@ network = networks.CE7
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "CE7"
 
-
-[Config BBhalf]
-network = networks.BB
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = 1.0
-**.adType = "BBhalf"
-
 [Config BB]
 network = networks.BB
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = 1.0
+**.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "BB"
 
 
@@ -47,3 +40,9 @@ network = networks.CE3half
 network = networks.CE7half
 **.frameCapacity = 1000 #uniform queue size
 **.injectionRate = ${0.8..1.0 step 0.01}
+
+[Config BBhalf]
+network = networks.BB
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = 1.0
+**.adType = "BBhalf"
