Further evaluation results, changed version to RELEASE for speed gain

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -7,8 +7,10 @@
 #eventlog-message-detail-pattern = *
 
 
-**.sendIaTime = 1ms  # high traffic
+**.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
+**.packetLength = 1250 bytes
 **.appType = "SourceRoutingApp"
+sim-time-limit = 100s
 
 
 [Config CE3]
