--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -10,15 +10,19 @@
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
 **.appType = "SourceRoutingApp"
-sim-time-limit = 100s
+sim-time-limit = 1000s
 
+[Config CE75]
+network = networks.CE75
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE75"
 
 [Config CE3]
 network = networks.CE3
 **.frameCapacity = 1000 #uniform queue size
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "CE3"
-
 
 [Config CE7]
 network = networks.CE7
