--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -10,7 +10,13 @@
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
 **.appType = "SourceRoutingApp"
-sim-time-limit = 1000s
+sim-time-limit = 100s
+
+[Config CE71]
+network = networks.CE71
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.7..1.0 step 0.01}
+**.adType = "CE71"
 
 [Config CE75]
 network = networks.CE75
