Implemented first version of Lotker graph. Basic one-gadget version complies with theoretic prediction but shows loss of 12% which is totally unrealistic due to one-gadget restriction.

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -10,7 +10,13 @@
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
 **.appType = "SourceRoutingApp"
-sim-time-limit = 1000s
+sim-time-limit = 100s #was 1000s
+
+[Config Lotker1]
+network = networks.Lotker1
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.6..0.99 step 0.01}
+**.adType = "Lotker1"
 
 [Config CE71]
 network = networks.CE71
