--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -12,6 +12,12 @@
 **.appType = "SourceRoutingApp"
 sim-time-limit = 100s #was 1000s
 
+[Config Lotker2]
+network = networks.Lotker2
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.61..0.99 step 0.01}
+**.adType = "Lotker2"
+
 [Config Lotker1]
 network = networks.Lotker1
 **.frameCapacity = 1000 #uniform queue size
