Added CF series of adversaries which base on non uniform timing. Start with CF3, CF7 in same topology as CE3, CE7

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -5,6 +5,7 @@
 #record-eventlog = true
 #eventlog-message-detail-pattern = Packet:declaredOn(Packet) or bitLength
 #eventlog-message-detail-pattern = *
+eventlog-file = eventlog/${configname}-${runnumber}.elog
 
 
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
@@ -27,7 +28,7 @@ network = networks.Lotker1
 [Config CE71]
 network = networks.CE71
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.6..1.0 step 0.01}
+**.injectionRate = ${0.1..1.0 step 0.01}
 **.adType = "CE71"
 
 [Config CE75]
@@ -35,6 +36,7 @@ network = networks.CE75
 **.frameCapacity = 1000 #uniform queue size
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "CE75"
+#record-eventlog = true
 
 [Config CE3]
 network = networks.CE3
@@ -42,11 +44,23 @@ network = networks.CE3
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "CE3"
 
+[Config CF3]
+network = networks.CE3
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CF3"
+
 [Config CE7]
 network = networks.CE7
 **.frameCapacity = 1000 #uniform queue size
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "CE7"
+
+[Config CF7]
+network = networks.CE7
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CF7"
 
 [Config BB]
 network = networks.BB
