tests with exponential delay for channels -> only fixed once at start

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -6,6 +6,9 @@
 #eventlog-message-detail-pattern = Packet:declaredOn(Packet) or bitLength
 #eventlog-message-detail-pattern = *
 eventlog-file = eventlog/${configname}-${runnumber}.elog
+#**.result-recording-modes = default,+vector,-histogram
+#**.result-recording-modes = all,-vector
+#**.result-recording-modes = last
 
 
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
@@ -22,13 +25,13 @@ network = networks.Lotker2
 [Config Lotker1]
 network = networks.Lotker1
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.6..0.99 step 0.01}
+**.injectionRate = ${0.5..0.999 step 0.01}
 **.adType = "Lotker1"
 
 [Config CE71]
 network = networks.CE71
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.1..1.0 step 0.01}
+**.injectionRate = ${0.5..1.0 step 0.01}
 **.adType = "CE71"
 
 [Config CE75]
@@ -41,8 +44,9 @@ network = networks.CE75
 [Config CE3]
 network = networks.CE3
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.8..1.0 step 0.01}
+**.injectionRate = ${0.5..1.0 step 0.01}
 **.adType = "CE3"
+#**.result-recording-modes = -
 
 [Config CF3]
 network = networks.CE3
@@ -65,7 +69,7 @@ network = networks.CE7
 [Config BB]
 network = networks.BB
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.8..1.0 step 0.01}
+**.injectionRate = ${0.5..1.0 step 0.01}
 **.adType = "BB"
 
 
@@ -84,3 +88,29 @@ network = networks.BB
 **.frameCapacity = 1000 #uniform queue size
 **.injectionRate = 1.0
 **.adType = "BBhalf"
+
+
+
+
+
+
+
+[Config indetBB]
+network = networks.BB
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.85..1.0 step 0.01}
+**.adType = "BB"
+# argument to exponential() is the mean; truncnormal() returns values from
+# the normal distribution truncated to nonnegative values
+
+#remember: 1ms=timeslot length, and usually we have 10 Mbps channels
+#with the following we get 10 us transmission delay
+**.packetLength = 1250 bytes
+**.channelDatarate = 1000 Mbps
+#now add delay so that in mean with transmission delay 1 time step (1ms)
+**.channelDelay = exponential(990us)
+
+#**.channelDelay = truncnormal(3s,1s)
+
+#**.app.packetLength = uniform(20 byte, 1024 byte)
+#**.sendIaTime = exponential(10ms)  # high traffic
