--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -5,9 +5,9 @@
 #record-eventlog = true
 #eventlog-message-detail-pattern = Packet:declaredOn(Packet) or bitLength
 #eventlog-message-detail-pattern = *
-eventlog-file = eventlog/${configname}-${runnumber}.elog
+#eventlog-file = eventlog/${configname}-${runnumber}.elog
 #**.result-recording-modes = default,+vector,-histogram
-#**.result-recording-modes = all,-vector
+**.result-recording-modes = all,-vector
 #**.result-recording-modes = last
 
 
@@ -25,13 +25,15 @@ network = networks.Lotker2
 [Config Lotker1]
 network = networks.Lotker1
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.5..0.999 step 0.01}
+#**.initialSetSize = ${1,2..10 step 2,20}
+**.injectionRate = ${0.5..0.999 step 0.1}
 **.adType = "Lotker1"
 
 [Config CE71]
 network = networks.CE71
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.5..1.0 step 0.01}
+**.initialSetSize = ${1,2,5,8,10,20}
+**.injectionRate = ${0.76..1.0 step 0.01}
 **.adType = "CE71"
 
 [Config CE75]
@@ -44,7 +46,8 @@ network = networks.CE75
 [Config CE3]
 network = networks.CE3
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.5..1.0 step 0.01}
+**.initialSetSize = ${1,2,5,8,10,20}
+**.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "CE3"
 #**.result-recording-modes = -
 
@@ -69,7 +72,8 @@ network = networks.CE7
 [Config BB]
 network = networks.BB
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.5..1.0 step 0.01}
+**.initialSetSize = ${1,2,5,8,10,20}
+**.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "BB"
 
 
