--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -14,7 +14,7 @@
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
 **.appType = "SourceRoutingApp"
-sim-time-limit = 100s #was 1000s
+sim-time-limit = 1000s #was 1000s
 
 [Config Lotker2]
 network = networks.Lotker2
@@ -25,8 +25,8 @@ network = networks.Lotker2
 [Config Lotker1]
 network = networks.Lotker1
 **.frameCapacity = 1000 #uniform queue size
-#**.initialSetSize = ${1,2..10 step 2,20}
-**.injectionRate = ${0.5..0.999 step 0.1}
+**.initialSetSize = ${1,2,5,8,10,20}
+**.injectionRate = ${0.5..0.999 step 0.01}
 **.adType = "Lotker1"
 
 [Config CE71]
