Added time-step wise delay change with uniform distribution

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -14,7 +14,7 @@
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
 **.appType = "SourceRoutingApp"
-sim-time-limit = 1000s #was 1000s
+sim-time-limit = 100s #was 1000s
 
 [Config Lotker2]
 network = networks.Lotker2
@@ -101,18 +101,18 @@ network = networks.BB
 
 [Config indetBB]
 network = networks.BB
+**.result-recording-modes = all
 **.frameCapacity = 1000 #uniform queue size
 **.injectionRate = ${0.85..1.0 step 0.01}
+**.initialSetSize = 100
 **.adType = "BB"
-# argument to exponential() is the mean; truncnormal() returns values from
-# the normal distribution truncated to nonnegative values
 
-#remember: 1ms=timeslot length, and usually we have 10 Mbps channels
-#with the following we get 10 us transmission delay
+#remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
+**.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
-**.channelDatarate = 1000 Mbps
-#now add delay so that in mean with transmission delay 1 time step (1ms)
-**.channelDelay = exponential(990us)
+**.datarate = 1000 Mbps
+**.randomization.meandelay = 990us
+**.randomization.stddelay = 50us
 
 #**.channelDelay = truncnormal(3s,1s)
 
