started analysis of stochastic setting

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -103,16 +103,16 @@ network = networks.BB
 network = networks.BB
 **.result-recording-modes = all
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.85..1.0 step 0.01}
+**.injectionRate = ${0.85..1.0 step 0.1}
 **.initialSetSize = 100
 **.adType = "BB"
 
 #remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
-**.datarate = 1000 Mbps
-**.randomization.meandelay = 990us
-**.randomization.stddelay = 50us
+**.datarate = 10000 Mbps
+**.randomization.meandelay = ${980us,1ms,1020us}
+**.randomization.stddelay = ${0us, 10us, 25us, 50us}
 
 #**.channelDelay = truncnormal(3s,1s)
 
