--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -69,12 +69,7 @@ network = networks.CE7
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "CF7"
 
-[Config BB]
-network = networks.BB
-**.frameCapacity = 1000 #uniform queue size
-**.initialSetSize = ${1,2,5,8,10,20}
-**.injectionRate = ${0.8..1.0 step 0.01}
-**.adType = "BB"
+
 
 
 [Config CE3half]
@@ -96,25 +91,31 @@ network = networks.BB
 
 
 
-
-
+[Config BB]
+network = networks.BB
+**.frameCapacity = 1000 #uniform queue size
+#**.initialSetSize = ${1,2,5,8,10,20}
+#**.injectionRate = ${0.8..1.0 step 0.01}
+**.initialSetSize = 100
+**.injectionRate = 1
+**.adType = "BB"
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = 0bps
 
 [Config indetBB]
 network = networks.BB
-**.result-recording-modes = all
 **.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.85..1.0 step 0.1}
 **.initialSetSize = 100
+**.injectionRate = ${0.9,0.95,1}
+
+**.result-recording-modes = all
 **.adType = "BB"
 
 #remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
-**.datarate = 10000 Mbps
-**.randomization.meandelay = ${980us,1ms,1020us}
-**.randomization.stddelay = ${0us, 10us, 25us, 50us}
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = ${500kbps,1000kbps,1500kbps}
+repeat = 10
 
-#**.channelDelay = truncnormal(3s,1s)
-
-#**.app.packetLength = uniform(20 byte, 1024 byte)
-#**.sendIaTime = exponential(10ms)  # high traffic
