--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -95,7 +95,7 @@ network = networks.BB
 network = networks.BB
 **.frameCapacity = 1000 #uniform queue size
 #**.initialSetSize = ${1,2,5,8,10,20}
-#**.injectionRate = ${0.8..1.0 step 0.01}
+#**.injectionRate = ${0.85..1.0 step 0.01}
 **.initialSetSize = 100
 **.injectionRate = 1
 **.adType = "BB"
@@ -103,19 +103,52 @@ network = networks.BB
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = 0bps
 
-[Config indetBB]
+
+
+
+
+[Config stochBB]
 network = networks.BB
-**.frameCapacity = 1000 #uniform queue size
-**.initialSetSize = 100
-**.injectionRate = ${0.9,0.95,1}
-
-**.result-recording-modes = all
 **.adType = "BB"
-
+#**.result-recording-modes = all
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.85..1.0 step 0.01}
+**.initialSetSize = 20
 #remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
-**.randomization.stdrate = ${500kbps,1000kbps,1500kbps}
-repeat = 10
+**.randomization.stdrate = ${500kbps,1000kbps,1500kbps, 2000kbps, 3000kbps}
+repeat = 20
 
+[Config stochCE71]
+network = networks.CE71
+**.adType = "CE71"
+#**.result-recording-modes = all
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.76..1.0 step 0.01}
+#**.initialSetSize = ${1,2,5,8,10,20}
+**.initialSetSize = 20
+#remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
+**.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = ${500kbps,1000kbps,1500kbps, 2000kbps, 3000kbps}
+repeat = 20
+
+[Config stochCE3]
+network = networks.CE3
+**.adType = "CE3"
+#**.result-recording-modes = all
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.89..1.0 step 0.01}
+#**.initialSetSize = ${1,2,5,8,10,20}
+**.initialSetSize = 20
+#remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
+**.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = ${500kbps,1000kbps,1500kbps, 2000kbps, 3000kbps}
+repeat = 20
+
+#**.result-recording-modes = -
