--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -22,19 +22,6 @@ network = networks.Lotker2
 **.injectionRate = ${0.61..0.99 step 0.01}
 **.adType = "Lotker2"
 
-[Config Lotker1]
-network = networks.Lotker1
-**.frameCapacity = 1000 #uniform queue size
-**.initialSetSize = ${1,2,5,8,10,20}
-**.injectionRate = ${0.5..0.999 step 0.01}
-**.adType = "Lotker1"
-
-[Config CE71]
-network = networks.CE71
-**.frameCapacity = 1000 #uniform queue size
-**.initialSetSize = ${1,2,5,8,10,20}
-**.injectionRate = ${0.76..1.0 step 0.01}
-**.adType = "CE71"
 
 [Config CE75]
 network = networks.CE75
@@ -43,13 +30,6 @@ network = networks.CE75
 **.adType = "CE75"
 #record-eventlog = true
 
-[Config CE3]
-network = networks.CE3
-**.frameCapacity = 1000 #uniform queue size
-**.initialSetSize = ${1,2,5,8,10,20}
-**.injectionRate = ${0.8..1.0 step 0.01}
-**.adType = "CE3"
-#**.result-recording-modes = -
 
 [Config CF3]
 network = networks.CE3
@@ -91,17 +71,57 @@ network = networks.BB
 
 
 
+
+
+
+
+
+
+
 [Config BB]
 network = networks.BB
 **.frameCapacity = 1000 #uniform queue size
 #**.initialSetSize = ${1,2,5,8,10,20}
-#**.injectionRate = ${0.85..1.0 step 0.01}
-**.initialSetSize = 100
-**.injectionRate = 1
+**.injectionRate = ${0.83..1.0 step 0.01}
+**.initialSetSize = 20
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = 0bps
+
+[Config CE3]
+network = networks.CE3
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.84..1.0 step 0.01}
+**.adType = "CE3"
+**.initialSetSize = 20
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = 0bps
+
+[Config Lotker1]
+network = networks.Lotker1
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.5..0.999 step 0.01}
+**.adType = "Lotker1"
+**.initialSetSize = 20
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = 0bps
+
+[Config CE71]
+network = networks.CE71
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE71"
+**.initialSetSize = 20
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = 0bps
+
+
+
+
 
 
 
@@ -118,8 +138,27 @@ network = networks.BB
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
-**.randomization.stdrate = ${500kbps,1000kbps,1500kbps, 2000kbps, 3000kbps}
-repeat = 20
+**.randomization.stdrate = ${500kbps,1000kbps,3000kbps}
+repeat = 50
+
+[Config stochCE3]
+network = networks.CE3
+**.adType = "CE3"
+#**.result-recording-modes = all
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.89..1.0 step 0.01}
+#**.initialSetSize = ${1,2,5,8,10,20}
+**.initialSetSize = 20
+#remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
+**.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = ${500kbps,1000kbps,3000kbps}
+repeat = 50
+
+#**.result-recording-modes = -
+
+
 
 [Config stochCE71]
 network = networks.CE71
@@ -134,21 +173,4 @@ network = networks.CE71
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = ${500kbps,1000kbps,1500kbps, 2000kbps, 3000kbps}
-repeat = 20
-
-[Config stochCE3]
-network = networks.CE3
-**.adType = "CE3"
-#**.result-recording-modes = all
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.89..1.0 step 0.01}
-#**.initialSetSize = ${1,2,5,8,10,20}
-**.initialSetSize = 20
-#remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
-**.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
-**.packetLength = 1250 bytes
-**.randomization.meanrate = 10Mbps
-**.randomization.stdrate = ${500kbps,1000kbps,1500kbps, 2000kbps, 3000kbps}
-repeat = 20
-
-#**.result-recording-modes = -
+repeat = 50
