--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -82,7 +82,8 @@ network = networks.BB
 network = networks.BB
 **.frameCapacity = 1000 #uniform queue size
 #**.initialSetSize = ${1,2,5,8,10,20}
-**.injectionRate = ${0.83..1.0 step 0.01}
+#**.injectionRate = ${0.83..1.0 step 0.01}
+**.injectionRate = 0.97
 **.initialSetSize = 20
 **.adType = "BB"
 **.packetLength = 1250 bytes
