Bugfix with timing in BB. First working version in OMNeT of A+ graph minor.

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -76,7 +76,17 @@ network = networks.BB
 
 
 
-
+[Config APlusMinor]
+network = networks.APlusMinor
+**.frameCapacity = 1000 #uniform queue size
+#**.initialSetSize = ${1,2,5,8,10,20}
+#**.injectionRate = ${0.83..1.0 step 0.01}
+**.injectionRate = 0.97
+**.initialSetSize = 20
+**.adType = "APlusMinor"
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = 0bps
 
 [Config BB]
 network = networks.BB
