--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -80,13 +80,14 @@ network = networks.BB
 network = networks.APlusMinor
 **.frameCapacity = 1000 #uniform queue size
 #**.initialSetSize = ${1,2,5,8,10,20}
-#**.injectionRate = ${0.83..1.0 step 0.01}
-**.injectionRate = 0.97
+**.injectionRate = ${0.85..1.0 step 0.01}
+#**.injectionRate = 0.97
 **.initialSetSize = 20
 **.adType = "APlusMinor"
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = 0bps
+**.result-recording-modes = all
 
 [Config BB]
 network = networks.BB
