--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,72 +1,11 @@
-# Main configuration file for running simulations
-
 [General]
 #debug-on-errors = true
 #record-eventlog = true
-#eventlog-message-detail-pattern = Packet:declaredOn(Packet) or bitLength
-#eventlog-message-detail-pattern = *
-#eventlog-file = eventlog/${configname}-${runnumber}.elog
-#**.result-recording-modes = default,+vector,-histogram
 **.result-recording-modes = all,-vector
-#**.result-recording-modes = last
-
-
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
 **.appType = "SourceRoutingApp"
-sim-time-limit = 100s #was 1000s
-
-[Config Lotker2]
-network = networks.Lotker2
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.61..0.99 step 0.01}
-**.adType = "Lotker2"
-
-
-[Config CE75]
-network = networks.CE75
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.8..1.0 step 0.01}
-**.adType = "CE75"
-#record-eventlog = true
-
-
-[Config CF3]
-network = networks.CE3
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.8..1.0 step 0.01}
-**.adType = "CF3"
-
-[Config CE7]
-network = networks.CE7
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.8..1.0 step 0.01}
-**.adType = "CE7"
-
-[Config CF7]
-network = networks.CE7
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.8..1.0 step 0.01}
-**.adType = "CF7"
-
-
-
-
-[Config CE3half]
-network = networks.CE3half
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.8..1.0 step 0.01}
-
-[Config CE7half]
-network = networks.CE7half
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = ${0.8..1.0 step 0.01}
-
-[Config BBhalf]
-network = networks.BB
-**.frameCapacity = 1000 #uniform queue size
-**.injectionRate = 1.0
-**.adType = "BBhalf"
+sim-time-limit = 10s
 
 
 
@@ -75,13 +14,13 @@ network = networks.BB
 
 
 
+## Basic Adversary Types ##
 
 [Config APlusMinor]
 network = networks.APlusMinor
 **.frameCapacity = 1000 #uniform queue size
 #**.initialSetSize = ${1,2,5,8,10,20}
-**.injectionRate = ${0.85..1.0 step 0.01}
-#**.injectionRate = 0.97
+**.injectionRate = ${0.8..1.0 step 0.01}
 **.initialSetSize = 20
 **.adType = "APlusMinor"
 **.packetLength = 1250 bytes
@@ -93,13 +32,13 @@ network = networks.APlusMinor
 network = networks.BB
 **.frameCapacity = 1000 #uniform queue size
 #**.initialSetSize = ${1,2,5,8,10,20}
-#**.injectionRate = ${0.83..1.0 step 0.01}
-**.injectionRate = 0.97
+**.injectionRate = ${0.8..1.0 step 0.01}
 **.initialSetSize = 20
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = 0bps
+**.result-recording-modes = all
 
 [Config CE3]
 network = networks.CE3
@@ -118,8 +57,6 @@ network = networks.Lotker1
 **.adType = "Lotker1"
 **.initialSetSize = 20
 **.packetLength = 1250 bytes
-**.randomization.meanrate = 10Mbps
-**.randomization.stdrate = 0bps
 
 [Config CE71]
 network = networks.CE71
@@ -137,7 +74,7 @@ network = networks.CE71
 
 
 
-
+## Stochastic Channel Delay Variation ##
 
 [Config stochBB]
 network = networks.BB
@@ -186,3 +123,67 @@ network = networks.CE71
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = ${500kbps,1000kbps,1500kbps, 2000kbps, 3000kbps}
 repeat = 50
+
+
+
+
+## Special Adversaries - in development ##
+
+[Config Lotker2]
+network = networks.Lotker2
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.61..0.99 step 0.01}
+**.adType = "Lotker2"
+
+[Config CE75]
+network = networks.CE75
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE75"
+#record-eventlog = true
+
+[Config CF3]
+network = networks.CE3
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CF3"
+
+[Config CE7]
+network = networks.CE7
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE7"
+
+[Config CF7]
+network = networks.CE7
+**.frameCapacity = 1000 #uniform queue size
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CF7"
+
+
+
+## OLD-Style Adversaries ##
+
+#[Config CE3half]
+#network = networks.CE3half
+#**.frameCapacity = 1000 #uniform queue size
+#**.injectionRate = ${0.8..1.0 step 0.01}
+
+#[Config CE7half]
+#network = networks.CE7half
+#**.frameCapacity = 1000 #uniform queue size
+#**.injectionRate = ${0.8..1.0 step 0.01}
+
+#[Config BBhalf]
+#network = networks.BB
+#**.frameCapacity = 1000 #uniform queue size
+#**.injectionRate = 1.0
+#**.adType = "BBhalf"
+
+
+
+
+
+
+
+
