Added Diaz adversary

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -40,6 +40,18 @@ network = networks.BB
 **.randomization.stdrate = 0bps
 **.result-recording-modes = all
 
+[Config Diaz]
+network = networks.Diaz
+**.frameCapacity = 1000 #uniform queue size
+#**.initialSetSize = ${1,2,5,8,10,20}
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.initialSetSize = 20
+**.adType = "Diaz"
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = 0bps
+**.result-recording-modes = all
+
 [Config CE3]
 network = networks.CE3
 **.frameCapacity = 1000 #uniform queue size
