--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -19,9 +19,8 @@ sim-time-limit = 100s
 
 [Config APlusMinor]
 network = networks.APlusMinor
-#**.initialSetSize = ${1,2,5,8,10,20}
+**.initialSetSize = ${1..10,20}
 **.injectionRate = ${0.8..1.0 step 0.01}
-**.initialSetSize = 20
 **.adType = "APlusMinor"
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
@@ -30,9 +29,8 @@ network = networks.APlusMinor
 
 [Config BB]
 network = networks.BB
-#**.initialSetSize = ${1,2,5,8,10,20}
+**.initialSetSize = ${1..10,20}
 **.injectionRate = ${0.8..1.0 step 0.01}
-**.initialSetSize = 20
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
@@ -41,9 +39,8 @@ network = networks.BB
 
 [Config Diaz]
 network = networks.Diaz
-#**.initialSetSize = ${1,2,5,8,10,20}
+**.initialSetSize = ${1..10,20}
 **.injectionRate = ${0.8..1.0 step 0.01}
-**.initialSetSize = 20
 **.adType = "Diaz"
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
