tuned result recording

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -19,33 +19,46 @@ sim-time-limit = 100s
 
 [Config APlusMinor]
 network = networks.APlusMinor
-**.initialSetSize = ${1..10,20}
-**.injectionRate = ${0.8..1.0 step 0.01}
+**.initialSetSize = 20 #${1..10,20}
+**.injectionRate = 0.96#${0.8..1.0 step 0.01}
 **.adType = "APlusMinor"
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
-**.randomization.stdrate = 0bps
 **.result-recording-modes = all
+**.randomization.stdrate = ${500kbps,3000kbps,6000kbps}
+repeat = 30
+**.result-recording-modes = default,-histogram
+**.C.queue[1].result-recording-modes = +vector
+**.adversary.result-recording-modes = +vector
 
 [Config BB]
 network = networks.BB
-**.initialSetSize = ${1..10,20}
-**.injectionRate = ${0.8..1.0 step 0.01}
+**.initialSetSize = 20 #${1..10,20}
+**.injectionRate = 0.96#${0.8..1.0 step 0.01}
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
-**.randomization.stdrate = 0bps
+**.randomization.stdrate = ${500kbps,3000kbps,6000kbps}
+#**.randomization.stdrate = 0bps
 **.result-recording-modes = all
+repeat = 30
+**.result-recording-modes = default,-histogram
+**.n1.queue[2].result-recording-modes = +vector
+**.adversary.result-recording-modes = +vector
 
 [Config Diaz]
 network = networks.Diaz
-**.initialSetSize = ${1..10,20}
-**.injectionRate = ${0.8..1.0 step 0.01}
+**.initialSetSize = 20 #${1..10,20}
+**.injectionRate = 0.96#${0.8..1.0 step 0.01}
 **.adType = "Diaz"
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
-**.randomization.stdrate = 0bps
-**.result-recording-modes = all
+**.randomization.stdrate = ${500kbps,3000kbps,6000kbps}
+#**.randomization.stdrate = 0bps
+**.result-recording-modes = default,-histogram
+**.n1.queue[1].result-recording-modes = +vector
+repeat = 30
+**.adversary.result-recording-modes = +vector
 
 [Config CE3]
 network = networks.CE3
