detailed tuning result-recording

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,7 +1,7 @@
 [General]
 #debug-on-errors = true
 #record-eventlog = true
-**.result-recording-modes = all,-vector
+#**.result-recording-modes = default,-vector,-histogram
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
 **.appType = "SourceRoutingApp"
@@ -19,46 +19,55 @@ sim-time-limit = 100s
 
 [Config APlusMinor]
 network = networks.APlusMinor
-**.initialSetSize = 20 #${1..10,20}
-**.injectionRate = 0.96#${0.8..1.0 step 0.01}
+**.initialSetSize = ${1..10,20}
+**.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "APlusMinor"
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
-**.result-recording-modes = all
-**.randomization.stdrate = ${500kbps,3000kbps,6000kbps}
-repeat = 30
-**.result-recording-modes = default,-histogram
-**.C.queue[1].result-recording-modes = +vector
-**.adversary.result-recording-modes = +vector
+**.randomization.stdrate = 0bps
+APlusMinor.A.**.result-recording-modes = -
+APlusMinor.D.**.result-recording-modes = -
+APlusMinor.E.**.result-recording-modes = -
+APlusMinor.B.**.result-recording-modes = -
+APlusMinor.F.**.result-recording-modes = -
+APlusMinor.C.**.result-recording-modes = all
+APlusMinor.adversary.result-recording-modes = all
+
 
 [Config BB]
 network = networks.BB
-**.initialSetSize = 20 #${1..10,20}
-**.injectionRate = 0.96#${0.8..1.0 step 0.01}
+**.initialSetSize = ${1..10,20}
+**.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
-**.randomization.stdrate = ${500kbps,3000kbps,6000kbps}
-#**.randomization.stdrate = 0bps
-**.result-recording-modes = all
-repeat = 30
-**.result-recording-modes = default,-histogram
-**.n1.queue[2].result-recording-modes = +vector
-**.adversary.result-recording-modes = +vector
+**.randomization.stdrate = 0bps
+BB.n**.**.result-recording-modes = -
+BB.m2.**.result-recording-modes = -
+BB.m3.**.result-recording-modes = -
+BB.m4.**.result-recording-modes = -
+BB.m1.**.result-recording-modes = all
+BB.adversary.result-recording-modes = all
 
 [Config Diaz]
 network = networks.Diaz
-**.initialSetSize = 20 #${1..10,20}
-**.injectionRate = 0.96#${0.8..1.0 step 0.01}
+**.initialSetSize = ${1..10,20}
+**.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "Diaz"
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
-**.randomization.stdrate = ${500kbps,3000kbps,6000kbps}
-#**.randomization.stdrate = 0bps
-**.result-recording-modes = default,-histogram
-**.n1.queue[1].result-recording-modes = +vector
-repeat = 30
-**.adversary.result-recording-modes = +vector
+**.randomization.stdrate = 0bps
+Diaz.n**.**.result-recording-modes = -
+Diaz.m2.**.result-recording-modes = -
+Diaz.m3.**.result-recording-modes = -
+Diaz.m4.**.result-recording-modes = -
+Diaz.m5.**.result-recording-modes = -
+Diaz.m6.**.result-recording-modes = -
+Diaz.m1.**.result-recording-modes = all
+Diaz.adversary.result-recording-modes = all
+
+
+
 
 [Config CE3]
 network = networks.CE3
