del old lotker1

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -19,7 +19,7 @@ sim-time-limit = 100s
 
 [Config APlusMinor]
 network = networks.APlusMinor
-**.initialSetSize = ${1..10,20}
+**.initialSetSize = ${1,2,5,10,20,50}
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "APlusMinor"
 **.packetLength = 1250 bytes
@@ -36,7 +36,7 @@ APlusMinor.adversary.result-recording-modes = all
 
 [Config BB]
 network = networks.BB
-**.initialSetSize = ${1..10,20}
+**.initialSetSize = ${1,2,5,10,20,50}
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "BB"
 **.packetLength = 1250 bytes
@@ -51,7 +51,7 @@ BB.adversary.result-recording-modes = all
 
 [Config Diaz]
 network = networks.Diaz
-**.initialSetSize = ${1..10,20}
+**.initialSetSize = ${1,2,5,10,20,50}
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "Diaz"
 **.packetLength = 1250 bytes
