new stochastic experiment

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -5,8 +5,8 @@
 **.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
 **.appType = "SourceRoutingApp"
-sim-time-limit = 100s
-**.frameCapacity = 3000 #uniform queue size
+sim-time-limit = 60s
+**.frameCapacity = 20000 #uniform queue size
 
 
 
@@ -102,18 +102,60 @@ network = networks.CE71
 
 ## Stochastic Channel Delay Variation ##
 
+[Config stochAPlusMinor]
+network = networks.APlusMinor
+**.initialSetSize = 20
+**.injectionRate = 0.96
+repeat = 30
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = ${500kbps,3000kbps,6000kbps,10000kbps}
+**.adType = "APlusMinor"
+**.packetLength = 1250 bytes
+APlusMinor.A.**.result-recording-modes = -
+APlusMinor.D.**.result-recording-modes = -
+APlusMinor.E.**.result-recording-modes = -
+APlusMinor.B.**.result-recording-modes = -
+APlusMinor.F.**.result-recording-modes = -
+APlusMinor.C.**.result-recording-modes = - # most interesting
+APlusMinor.adversary.result-recording-modes = all
+
+
 [Config stochBB]
 network = networks.BB
-**.adType = "BB"
-#**.result-recording-modes = all
-**.injectionRate = ${0.85..1.0 step 0.01}
 **.initialSetSize = 20
-#remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
-**.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
-**.packetLength = 1250 bytes
+**.injectionRate = 0.96
+repeat = 30
 **.randomization.meanrate = 10Mbps
-**.randomization.stdrate = ${500kbps,1000kbps,3000kbps}
-repeat = 50
+**.randomization.stdrate = ${500kbps,3000kbps,6000kbps,10000kbps}
+**.adType = "BB"
+**.packetLength = 1250 bytes
+BB.n**.**.result-recording-modes = -
+BB.m2.**.result-recording-modes = -
+BB.m3.**.result-recording-modes = -
+BB.m4.**.result-recording-modes = -
+BB.m1.**.result-recording-modes = -# most interesting
+BB.adversary.result-recording-modes = all
+
+[Config stochDiaz]
+network = networks.Diaz
+**.initialSetSize = 20
+**.injectionRate = 0.96
+repeat = 20
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = ${500kbps,3000kbps,6000kbps}
+**.adType = "Diaz"
+**.packetLength = 1250 bytes
+Diaz.n**.**.result-recording-modes = -
+Diaz.m2.**.result-recording-modes = -
+Diaz.m3.**.result-recording-modes = -
+Diaz.m4.**.result-recording-modes = -
+Diaz.m5.**.result-recording-modes = -
+Diaz.m6.**.result-recording-modes = -
+Diaz.m1.**.result-recording-modes = -# most interesting
+Diaz.adversary.result-recording-modes = all
+
+
+
 
 [Config stochCE3]
 network = networks.CE3
