measuredSetSize statistics for all adversaries Changes to Lotker initial set size analysis in R

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -78,12 +78,13 @@ network = networks.CE3
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = 0bps
 
-[Config Lotker1]
-network = networks.Lotker1
-**.injectionRate = ${0.5..0.999 step 0.01}
-**.adType = "Lotker1"
+[Config Lotker]
+network = networks.Lotker
+**.injectionRate = 0.8#${0.5..0.999 step 0.01}
+**.adType = "Lotker"
 **.initialSetSize = 20
 **.packetLength = 1250 bytes
+**.result-recording-modes = +vector
 
 [Config CE71]
 network = networks.CE71
