only measured set size recording

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -30,7 +30,7 @@ APlusMinor.D.**.result-recording-modes = -
 APlusMinor.E.**.result-recording-modes = -
 APlusMinor.B.**.result-recording-modes = -
 APlusMinor.F.**.result-recording-modes = -
-APlusMinor.C.**.result-recording-modes = all
+APlusMinor.C.**.result-recording-modes = -
 APlusMinor.adversary.result-recording-modes = all
 
 
@@ -46,7 +46,7 @@ BB.n**.**.result-recording-modes = -
 BB.m2.**.result-recording-modes = -
 BB.m3.**.result-recording-modes = -
 BB.m4.**.result-recording-modes = -
-BB.m1.**.result-recording-modes = all
+BB.m1.**.result-recording-modes = -
 BB.adversary.result-recording-modes = all
 
 [Config Diaz]
@@ -63,7 +63,7 @@ Diaz.m3.**.result-recording-modes = -
 Diaz.m4.**.result-recording-modes = -
 Diaz.m5.**.result-recording-modes = -
 Diaz.m6.**.result-recording-modes = -
-Diaz.m1.**.result-recording-modes = all
+Diaz.m1.**.result-recording-modes = -
 Diaz.adversary.result-recording-modes = all
 
 
@@ -141,9 +141,9 @@ BB.adversary.result-recording-modes = all
 network = networks.Diaz
 **.initialSetSize = 20
 **.injectionRate = 0.96
-repeat = 20
+repeat = 30
 **.randomization.meanrate = 10Mbps
-**.randomization.stdrate = ${500kbps,3000kbps,6000kbps}
+**.randomization.stdrate = ${500kbps,3000kbps,6000kbps,10000kbps}
 **.adType = "Diaz"
 **.packetLength = 1250 bytes
 Diaz.n**.**.result-recording-modes = -
