stochastic omnetpp.ini

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -107,9 +107,9 @@ network = networks.CE71
 network = networks.APlusMinor
 **.initialSetSize = 20
 **.injectionRate = 0.96
-repeat = 30
+repeat = 1 # 30
 **.randomization.meanrate = 10Mbps
-**.randomization.stdrate = ${500kbps,3000kbps,6000kbps,10000kbps}
+**.randomization.stdrate = ${0kbps, 500kbps,3000kbps}
 **.adType = "APlusMinor"
 **.packetLength = 1250 bytes
 APlusMinor.A.**.result-recording-modes = -
@@ -117,8 +117,8 @@ APlusMinor.D.**.result-recording-modes = -
 APlusMinor.E.**.result-recording-modes = -
 APlusMinor.B.**.result-recording-modes = -
 APlusMinor.F.**.result-recording-modes = -
-APlusMinor.C.**.result-recording-modes = - # most interesting
-APlusMinor.adversary.result-recording-modes = all
+APlusMinor.C.**.result-recording-modes = all
+APlusMinor.adversary.result-recording-modes = -
 
 
 [Config stochBB]
@@ -127,7 +127,7 @@ network = networks.BB
 **.injectionRate = 0.96
 repeat = 30
 **.randomization.meanrate = 10Mbps
-**.randomization.stdrate = ${500kbps,3000kbps,6000kbps,10000kbps}
+**.randomization.stdrate = ${0kbps, 500kbps,3000kbps}
 **.adType = "BB"
 **.packetLength = 1250 bytes
 BB.n**.**.result-recording-modes = -
@@ -143,7 +143,7 @@ network = networks.Diaz
 **.injectionRate = 0.96
 repeat = 30
 **.randomization.meanrate = 10Mbps
-**.randomization.stdrate = ${500kbps,3000kbps,6000kbps,10000kbps}
+**.randomization.stdrate = ${0kbps, 500kbps,3000kbps}
 **.adType = "Diaz"
 **.packetLength = 1250 bytes
 Diaz.n**.**.result-recording-modes = -
