--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -80,11 +80,13 @@ network = networks.CE3
 
 [Config Lotker]
 network = networks.Lotker
-**.injectionRate = 0.8#${0.5..0.999 step 0.01}
+**.injectionRate = 0.65
 **.adType = "Lotker"
-**.initialSetSize = 20
+**.initialSetSize = 2965
 **.packetLength = 1250 bytes
 **.result-recording-modes = +vector
+sim-time-limit = 200s
+**.frameCapacity = 100000 #
 
 [Config CE71]
 network = networks.CE71
