R analysis for Lotker + omnet configuration for Lotker

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -84,7 +84,11 @@ network = networks.Lotker
 **.adType = "Lotker"
 **.initialSetSize = 2965
 **.packetLength = 1250 bytes
-**.result-recording-modes = +vector
+**channel.result-recording-modes = -
+**routing.result-recording-modes = -
+**queue**.result-recording-modes = -
+**.app**.result-recording-modes = -
+Lotker.adversary.result-recording-modes = all
 sim-time-limit = 200s
 **.frameCapacity = 100000 #
 
