--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -224,6 +224,25 @@ network = networks.CE7
 
 
 
+
+
+
+
+
+
+
+
+
+[Config varBB]
+network = networks.VarBB
+**.initialSetSize = 20
+**.injectionRate = 0.96
+repeat = 30
+**.adType = "BB"
+**.packetLength = 1250 bytes
+
+
+
 ## OLD-Style Adversaries ##
 
 #[Config CE3half]
