main folder properties + ignores

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -238,8 +238,21 @@ network = networks.VarBB
 **.initialSetSize = 20
 **.injectionRate = 0.96
 repeat = 30
+**.datarate = 10Mbps
+**.meanDatarate = 10Mbps
+**.stdDatarate = ${0kbps,500kbps,3000kbps}
 **.adType = "BB"
 **.packetLength = 1250 bytes
+BB.n**.**.result-recording-modes = -
+BB.m2.**.result-recording-modes = -
+BB.m3.**.result-recording-modes = -
+BB.m4.**.result-recording-modes = -
+BB.m1.**.result-recording-modes = -
+BB.adversary.result-recording-modes = all
+
+
+
+
 
 
 
