--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -250,6 +250,43 @@ BB.m4.**.result-recording-modes = -
 BB.m1.**.result-recording-modes = -
 BB.adversary.result-recording-modes = all
 
+[Config varAPlusMinor]
+network = networks.VarAPlusMinor
+**.initialSetSize = 20
+**.injectionRate = 0.96
+repeat = 1 # 30
+**.datarate = 10Mbps
+**.meanDatarate = 10Mbps
+**.stdDatarate = ${0kbps,500kbps,3000kbps}
+**.adType = "APlusMinor"
+**.packetLength = 1250 bytes
+APlusMinor.A.**.result-recording-modes = -
+APlusMinor.D.**.result-recording-modes = -
+APlusMinor.E.**.result-recording-modes = -
+APlusMinor.B.**.result-recording-modes = -
+APlusMinor.F.**.result-recording-modes = -
+APlusMinor.C.**.result-recording-modes = - 
+APlusMinor.adversary.result-recording-modes = all
+
+[Config varDiaz]
+network = networks.VarDiaz
+**.initialSetSize = 20
+**.injectionRate = 0.96
+repeat = 30
+**.datarate = 10Mbps
+**.meanDatarate = 10Mbps
+**.stdDatarate = ${0kbps,500kbps,3000kbps}
+**.adType = "Diaz"
+**.packetLength = 1250 bytes
+Diaz.n**.**.result-recording-modes = -
+Diaz.m2.**.result-recording-modes = -
+Diaz.m3.**.result-recording-modes = -
+Diaz.m4.**.result-recording-modes = -
+Diaz.m5.**.result-recording-modes = -
+Diaz.m6.**.result-recording-modes = -
+Diaz.m1.**.result-recording-modes = -
+Diaz.adversary.result-recording-modes = all
+
 
 
 
